# marginalia

./: Cargo.toml  README.md  build.rs  flake.nix
src/: annotations.rs  comments.rs  diff.rs  lib.rs  main.rs  matching.rs  optparse.rs  output.rs  scope.rs  watchfile.rs
tests/: golden.rs  integration.rs
tests/golden/: all_check.txt  file_and_all_mix.txt  file_check.txt  multiline_description.txt  multiple_checks.txt  no_checks.txt  one_of_each.txt  scoped_check_with_tree_sitter.txt  scoped_check_without_tree_sitter.txt  single_line_scope.txt  tag_check.txt  tag_check_multiple_triggers.txt  tag_check_three_locations.txt
