[package]
name = "marginalia"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Find [check] annotations in code comments near changed lines"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-c = "0.23"
tree-sitter-nix = "0.0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
